@@ -1,0 +1,21 @@
+<project>
+    <dependencies>
+        <dependency>
+            <groupId>maven</groupId>
+            <artifactId>cc-maven-test</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>maven</groupId>
+            <artifactId>maven-ant-plugin</artifactId>
+            <version>1.0</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <id>maven</id>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
+</project>
