@@ -35,6 +35,10 @@ MavenBuilder
 ----------------------
 * Fix for CC-40 where download failures were treated as success. Patch by Tim Shadel
 
+MavenSnapshotDependency
+----------------------
+* Add new SourceControl that will query Maven SNAPSHOT to determine if a build should proceed. Submitted by Tim Shadel
+
 Project
 ----------------------
 * Reset ProjectState to IDLE in case of an exception while building. Patch by Will Gwaltney
